name:          trac-to-github
version:       0.1.0.0
synopsis:      Simple conversion of Trac tickets to GitHub issues
license:       BSD3
license-file:  LICENSE
author:        Ian Ross
maintainer:    ian@skybluetrades.net
copyright:     Ian Ross 2013
build-type:    Simple
cabal-version: >=1.8

executable trac-to-github
  main-is:       trac-to-github.hs
  build-depends: base           == 4.6.*
               , text           >= 0.11.3.1  && < 0.12
               , text-icu       >= 0.6.3.5   && < 0.7
               , filepath       >= 1.3.0.1   && < 1.4
               , directory      >= 1.2.0.1   && < 1.3
               , network        >= 2.4.1.2   && < 2.5
               , HTTP           >= 4000.2.8
               , csv-conduit    >= 0.5.1     && < 0.6
               , github         >= 0.7.0     && < 0.8
               , HandsomeSoup   >= 0.3.1     && < 0.4
               , hxt            >= 9.3.1.1   && < 9.4
